cards mostly work, fix description overflow

--- a/app/assets/stylesheets/project/index.scss
+++ b/app/assets/stylesheets/project/index.scss
@@ -55,6 +55,7 @@
 .description {
   // padding: 10px 10px;
   flex-grow: 1;
+  overflow: hidden;
 }
 
 .owner-info {
